Prevent it from clashing with other CSS in Gmail.

--- a/src/less/core.less
+++ b/src/less/core.less
@@ -126,6 +126,10 @@ div.hopscotch-bubble {
     width: @arrowWidth*2;
     height: @arrowWidth*2;
 
+    border: none !important;
+    background-color: transparent !important;
+    cursor: auto !important;
+
     .hopscotch-bubble-arrow,
     .hopscotch-bubble-arrow-border {
       width: 0;
